--- a/html5-boilerplate_v8.0.0/index.html
+++ b/html5-boilerplate_v8.0.0/index.html
@@ -26,7 +26,9 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <h1>Drawing Music</h1>
+  <h2>A Simple Tool for Learning the Concept of Western Notation</h2>
+  <p>A short description of how to start the app and what can you do with it.</p>
   <br>
 
   <!-- Trying the Tone.js library -->
@@ -42,6 +44,12 @@
         playButton.addEventListener('click', () => {
             synth.triggerAttackRelease('A3', '4n');
         });
+
+
+
+       
+
+  
     </script>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
